# constriction

./: .gitignore  Cargo.toml  LICENSE  LICENSE.Apache-2.0  LICENSE.MIT  Q.npz  README-python.md  README-rust.md  README.md  about.hbs  about.toml  get_version.py  index.html  license.html  pyproject.toml  pythondoc.py  setup.py  syspaths.py
.github/workflows/: bench.yaml  cross.yaml  release.yaml  test.yaml  tests.yaml  website-frm-source.yaml  website-from-source.yaml  website.yaml
apidoc/python/: constriction.html  index.html  stream.html  symbol.html
apidoc/python/constriction/: stream.html  symbol.html
apidoc/python/constriction/stream/: chain.html  model.html  queue.html  stack.html
apidoc/python/constriction/symbol/: huffman.html
apidoc/python/stream/: chain.html  model.html  queue.html  stack.html
apidoc/python/symbol/: huffman.html
apidoc/rust/: index.html
benches/: augmented_btree.rs  bench.rs  lookup.rs
core/: Cargo.toml
core/src/: distributions.rs  lib.rs
ensure_no_std/: Cargo.toml
ensure_no_std/.cargo/: config.toml
ensure_no_std/src/: link.ld  main.rs
examples/python/: .gitignore  01-hello-world.ipynb  02-custom-entropy-models.ipynb  03-tuorial-autoregressive-nlp-compression.ipynb  03-tutorial-autoregressive-nlp-compression.ipynb
notes/: range-coding.md
python-bindings/: Cargo.toml
python-bindings/src/: lib.rs
src/: auryn.rs  backends.rs  distributions.rs  lib.rs  models.rs  pybindings.rs  queue.rs  range.rs  stack.rs  symbol.rs
src/ans/: mod.rs  stable.rs
src/models/: lookup.rs  mod.rs
src/pybindings/: mod.rs  quant.rs
src/pybindings/quant/: mod.rs  vbq.rs
src/pybindings/stream/: ans.rs  chain.rs  mod.rs  model.rs  models.rs  queue.rs  stack.rs
src/pybindings/stream/model/: internals.rs
src/pybindings/symbol/: huffman.rs  mod.rs
src/quant/: augmented_btree.rs  mod.rs  vbq.rs
src/stack/: backend.rs  mod.rs  stable.rs
src/stream/: backends.rs  chain.rs  mod.rs  model.rs  models.rs  queue.rs  range.rs  stack.rs
src/stream/ans/: backend.rs  mod.rs  stable.rs
src/stream/model/: categorical.rs  quantize.rs  uniform.rs
src/stream/model/categorical/: contiguous.rs  lazy_contiguous.rs  lookup_contiguous.rs  lookup_noncontiguous.rs  non_contiguous.rs
src/stream/models/: lookup.rs  mod.rs
src/stream/stack/: backend.rs  mod.rs  stable.rs
src/symbol/: exp_golomb.rs  huffman.rs  mod.rs
src/symbol/codebooks/: exp_golomb.rs  huffman.rs  mod.rs
tests/: issue52.rs  random_data.rs  readme.rs
tests/python/: test_constriction.py  test_docexamples.py  test_docexamples_f32.py  test_docexamples_quant.py  test_lazy_f32.py  test_lazy_f64.py  test_quant_additional.py
