[package]
authors = ["Robert Bamler <robert.bamler@uni-tuebingen.de>"]
categories = ["compression", "science", "no-std"]
description = "Entropy coders for research and production (Rust and Python)."
documentation = "https://docs.rs/constriction/"
edition = "2018"
homepage = "https://bamler-lab.github.io/constriction/"
keywords = ["compression", "entropy-coding", "range-coding", "python", "machine-learning"]
license = "MIT OR Apache-2.0 OR BSL-1.0"
name = "constriction"
readme = "README-rust.md"
repository = "https://github.com/bamler-lab/constriction/"
version = "0.2.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]
name = "constriction"

[features]
default = ["std", "system_math"]

# Features "system_math" is active by default. Deactivate it if your compilation
# target has no system math C library (e.g., if you compile to WebAssembly).
system_math = ["probability/system_math", "special/system_math"]

# Feature "std" is active by default. Deactivate it if you want to compile
# to a `no_std` target (e.g., a microcontroller). You'll likely want to
# deactivate feature "system_math" as well in this case.
std = ["probability/std", "special/std"]

# Use feature `pybindings` to compile the python extension module that provides
# access to this library from python. This feature is turned off by default
# because it causes problems with `cargo test`. To turn it on, run:
#   cargo build --release --features pybindings
pybindings = ["ndarray", "numpy", "pyo3"]

[dependencies]
hashbrown = "0.11"
num = "0.4"
smallvec = "1.6.1"

# special = {path = "../special", default-features = false}# Only used if "std" is deactivated.
special = {git = "https://github.com/robamler/special.git", rev = "16708ea249ec56fbebfcc91b413142f01671ebd9", default-features = false}
# probability = {path = "../probability", default-features = false}
probability = {git = "https://github.com/robamler/probability.git", rev = "29c68c470990a9e5dbd13f8687f6bbe7edd61c00", default-features = false}

ndarray = {version = "0.15", optional = true}
numpy = {version = "0.15", optional = true}
pyo3 = {version = "0.15.1", features = ["extension-module"], optional = true}

[dev-dependencies]
byteorder = "1.4.2"
criterion = "0.3"
rand = "0.8.3"
rand_pcg = "0.3"
rand_xoshiro = "0.6"

[[bench]]
harness = false
name = "lookup"

[package.metadata.maturin]
# TODO: requires-python (string fields), requires-external
classifiers = [
  "Topic :: System :: Archiving :: Compression",
  "Intended Audience :: Science/Research",
]
maintainer = "Robert Bamler"
maintainer-email = "robert.bamler@uni-tuebingen.de"
project-url."Source repository" = "https://github.com/bamler-lab/constriction/"
