[project]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: System :: Archiving :: Compression",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "numpy~=1.19",
]
maintainers = [
  {name = "Robert Bamler", email = "robert.bamler@uni-tuebingen.de"},
]
name = "constriction"
readme = "README-python.md"
requires-python = ">=3.7,<3.12"

[project.urls]
changelog = "https://github.com/bamler-lab/constriction/releases"
documentation = "https://bamler-lab.github.io/constriction/apidoc/python/"
homepage = "https://bamler-lab.github.io/constriction/"
repository = "https://github.com/bamler-lab/constriction"

[tool.poetry]
authors = ["Robert Bamler <robert.bamler@uni-tuebingen.de>"]
description = "Entropy coders for research and production (Python and Rust)."
documentation = "https://bamler-lab.github.io/constriction/apidoc/python/"
homepage = "https://bamler-lab.github.io/constriction/"
keywords = ["compression", "machine-learning", "entropy-coding", "range-coding", "ANS"]
license = "MIT OR Apache-2.0 OR BSL-1.0"
name = "constriction"
repository = "https://github.com/bamler-lab/constriction/"
version = "1.2.2"

[tool.poetry.dependencies]
numpy = [
  {version = "^1.19", python = "<3.11"},
  {version = "^1.23.2", python = ">=3.11"},
]
python = "^3.7,<3.12"

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = "^3.5"
maturin = "^0.13.2"
pdoc3 = "^0.10.0"
pylint = "^2.6"
pytest = "^6.1"
pytest-runner = "*"
scipy = [
  {version = "^1.7.3", python = "<3.8"},
  {version = ">=1.8,<1.10", python = ">=3.8"},
]
toml = "^0.10.2"
twine = "^3.7.1"
wheel = "*"

[build-system]
authors = ["Robert Bamler <robert.bamler@uni-tuebingen.de>"]
build-backend = "maturin"
requires = ["maturin>=0.13,<0.14"]
