[project]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Archiving :: Compression",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "numpy>=1.16,<3.0",
]
dynamic = ["version"]
license = {text = "various (see LICENSE.html)"}
maintainers = [
  {name = "Robert Bamler", email = "robert.bamler@uni-tuebingen.de"},
]
name = "constriction"
readme = "README-python.md"
requires-python = ">=3.9"

[project.urls]
changelog = "https://github.com/bamler-lab/constriction/releases"
documentation = "https://bamler-lab.github.io/constriction/apidoc/python/"
homepage = "https://bamler-lab.github.io/constriction/"
repository = "https://github.com/bamler-lab/constriction"

[tool.poetry]
authors = ["Robert Bamler <robert.bamler@uni-tuebingen.de>"]
description = "Entropy coders for research and production (Python and Rust)."
documentation = "https://bamler-lab.github.io/constriction/apidoc/python/"
homepage = "https://bamler-lab.github.io/constriction/"
keywords = ["compression", "machine-learning", "entropy-coding", "range-coding", "ANS"]
name = "constriction"
repository = "https://github.com/bamler-lab/constriction/"
version = "1.2.2"

[tool.poetry.dependencies]
numpy = [
  {version = "^1.16", python = "<3.11"},
  {version = "^1.23.2", python = ">=3.11,<3.12"},
  {version = "^1.26.1", python = ">=3.12,<3.13"},
  {version = "^2.1.2", python = ">=3.13"},
]
python = "^3.9.2,<3.14"

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = {version = "^7.1.1", python = ">=3.9"}
maturin = "^1.7.1"
pdoc3 = {version = "^0.11.1", python = ">=3.9"}
pylint = "^3.2.7"
pytest = "^8.3.2"
pytest-runner = "*"
scipy = [
  {version = "^1.8", python = ">=3.9,<3.12"},
  {version = "^1.11.3", python = ">=3.12"},
]
toml = "^0.10.2"
wheel = "*"

twine = "^5.1.1"

[build-system]
authors = ["Robert Bamler <robert.bamler@uni-tuebingen.de>"]
build-backend = "maturin"
requires = ["maturin>=1.7.1,<2.0"]
