[package]
authors = ["Robert Bamler <robert.bamler@gmail.com>"]
edition = "2018"
name = "ans"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
name = "ans"

[dependencies]
num = "0.3.1"
statrs = "0.13"

ndarray = {version = "0.13", optional = true}
numpy = {version = "0.12", optional = true}
pyo3 = {version = "0.12.3", features = ["extension-module"], optional = true}

[dev-dependencies]
rand = "0.7.3"
rand_xoshiro = "0.4"
